Update build script based on Gradle Java 9 tutorial: https://guides.gradle.org/building-java-9-modules/